--- a/execicios/ex022/fundo006.html
+++ b/execicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
         main {
@@ -26,6 +26,10 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorum provident error, obcaecati sint deserunt atque voluptate nobis quae nam labore aspernatur doloribus recusandae minus sapiente enim soluta tempore amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit sequi quas doloribus odit, recusandae nisi quaerat non rerum reprehenderit accusantium fugit deserunt reiciendis quidem soluta corrupti maiores omnis a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, distinctio quam fuga ipsum culpa deserunt dolor omnis repudiandae, eum molestias recusandae at repellat. Consequuntur aliquam explicabo incidunt iure dignissimos ipsa.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorum provident error, obcaecati sint deserunt atque voluptate nobis quae nam labore aspernatur doloribus recusandae minus sapiente enim soluta tempore amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit sequi quas doloribus odit, recusandae nisi quaerat non rerum reprehenderit accusantium fugit deserunt reiciendis quidem soluta corrupti maiores omnis a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, distinctio quam fuga ipsum culpa deserunt dolor omnis repudiandae, eum molestias recusandae at repellat. Consequuntur aliquam explicabo incidunt iure dignissimos ipsa.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorum provident error, obcaecati sint deserunt atque voluptate nobis quae nam labore aspernatur doloribus recusandae minus sapiente enim soluta tempore amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit sequi quas doloribus odit, recusandae nisi quaerat non rerum reprehenderit accusantium fugit deserunt reiciendis quidem soluta corrupti maiores omnis a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, distinctio quam fuga ipsum culpa deserunt dolor omnis repudiandae, eum molestias recusandae at repellat. Consequuntur aliquam explicabo incidunt iure dignissimos ipsa.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorum provident error, obcaecati sint deserunt atque voluptate nobis quae nam labore aspernatur doloribus recusandae minus sapiente enim soluta tempore amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit sequi quas doloribus odit, recusandae nisi quaerat non rerum reprehenderit accusantium fugit deserunt reiciendis quidem soluta corrupti maiores omnis a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, distinctio quam fuga ipsum culpa deserunt dolor omnis repudiandae, eum molestias recusandae at repellat. Consequuntur aliquam explicabo incidunt iure dignissimos ipsa.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos dolorum provident error, obcaecati sint deserunt atque voluptate nobis quae nam labore aspernatur doloribus recusandae minus sapiente enim soluta tempore amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit sequi quas doloribus odit, recusandae nisi quaerat non rerum reprehenderit accusantium fugit deserunt reiciendis quidem soluta corrupti maiores omnis a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, distinctio quam fuga ipsum culpa deserunt dolor omnis repudiandae, eum molestias recusandae at repellat. Consequuntur aliquam explicabo incidunt iure dignissimos ipsa.</p>
     </main>
     
