--- a/execicios/ex026/mq005/index.html
+++ b/execicios/ex026/mq005/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 <body>
     <header>
+        <h1>Meu Site</h1>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+menu
+</span>
+        <menu id="itens">
         <ul>
             <li><a href="#">Opção 1</a></li>
             <li><a href="#">opção 2</a></li>
@@ -15,6 +21,7 @@
             <li><a href="#">opção 4</a></li>
             <li><a href="#">opção 5</a></li>
         </ul>
+        </menu>
     </header>
     <main>
         <article>
@@ -24,5 +31,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem in culpa, vitae vel maxime perspiciatis nisi illo officia quae atque distinctio repellendus animi amet est quasi exercitationem quia corporis! Sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel in, maxime assumenda quasi eos aspernatur veniam sint molestiae recusandae distinctio quod qui doloribus impedit consequuntur sunt quae, praesentium obcaecati deserunt?</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+
+    </script>
 </body>
 </html>
